<resources>
    <string name="app_name">Journey Maker Jobs</string>

    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>

    <string name="action_settings">Settings</string>
    <string name="user">&#xf007;</string>
    <string name="email">&#xf0e0;</string>
    <string name="phone">&#xf095;</string>
    <string name="location">&#xf041;</string>
    <string name="date">&#xf073;</string>
    <string name="star">&#xf005;</string>
    <string name="drop">&#xf043;</string>
    <string name="mail">&#xf0e0;</string>
    <string name="sms">&#xf27a;</string>
    <string name="edit">&#xf044;</string>
    <string name="age">&#xf251;</string>
    <string name="del">&#xf1f8;</string>
    <string name="gender">&#xf224;</string>
    <string name="out">&#xf061;</string>
    <string name="settings">&#xf013;</string>
    <string name="info">&#xf05a;</string>
    <string name="gallery">&#xf03e;</string>
    <string name="pass">&#xf13e;</string>
    <string name="pass1">&#xf023;</string>
    <string name="right">&#xf061;</string>
    <string name="wrong">&#xf00d;</string>
    <string name="ok">&#xf00c;</string>
    <string name="pending">&#xf06a;</string>
    <string name="stetho">&#xf0f1;</string>
    <string name="in">&#xf13e;</string>
    <string name="chat">&#xf075;</string>
    <string name="award">&#xf091;</string>
    <string name="error">&#xf071;</string>
    <string name="plus">&#xf067;</string>
    <string name="minus">&#xf068;</string>
    <string name="loc">&#xf3c5;</string>
    <string name="diamond">&#xf3a5;</string>
    <string name="medal">&#xf005;</string>
    <string name="medal1">&#xf559;</string>
    <string name="username">&#xf4fc;</string>
    <string name="useremp">&#xf508;</string>
    <string name="jobs">&#xf0b1;</string>
    <string name="job_apply">&#xf022;</string>
    <string name="notification">&#xf0f3;</string>
    <string name="logout">&#xf2f5;</string>
    <string name="web">&#xf0ac;</string>
    <string name="home">&#xf015;</string>
    <string name="back">&#xf053;</string>
    <string name="calendar">&#xf073;</string>
    <string name="clock">&#xf017;</string>
    <string name="plane">&#xf1d8;</string>
    <string name="money">&#xf3d1;</string>
    <string name="menu">&#xf142;</string>
    <string name="pdf">&#xf1c1;</string>
    <string name="cv">&#xf2bb;</string>
    <string name="cv_edit">&#xf4ff;</string>
    <string name="making">&#xf591;</string>
    <string name="dp">&#xf2bd;</string>
    <string name="graduate">&#xf501;</string>
    <string name="graduate_cap">&#xf19d;</string>
    <string name="school">&#xf549;</string>
    <string name="down">&#xf078;</string>
    <string name="thumbs_up">&#xf164;</string>
    <string name="all_users">&#xf0c0;</string>
    <string name="search">&#xf002;</string>
    <string name="building">&#xf1ad;</string>
    <string name="eye">&#xf06e;</string>
    <string name="eyenot">&#xf070;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
