<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Official Website"
                android:textColor="#000000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="journeymakerjobs.com"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:id="@+id/viv"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/v"
        android:layout_marginTop="0dp"
        android:background="#cad6d6d6" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/v"
        android:layout_marginBottom="0dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:progressDrawable="@drawable/circular_progress_bar" />

</RelativeLayout>