<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Resume Edit"
                android:textColor="#000000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Jobs In Sylhet"
                android:textColor="#6b6868"
                android:textSize="11dp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:id="@+id/viv"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/v"
        android:layout_marginTop="0dp"
        android:background="#cad6d6d6" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/la"
        android:layout_below="@+id/viv"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:titleTextAppearance="@style/MyTabLayoutTextAppearance"
            app:tabSelectedTextColor="#363636"
            app:tabTextColor="#9f9f9f" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/la"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>