<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Employee List"
                android:textColor="#000000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Post Name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11dp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:id="@+id/viv"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/v"
        android:layout_marginTop="0dp"
        android:background="#cab1b1b1" />

    <LinearLayout
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viv"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Employees"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center|end"
            android:visibility="gone"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/sts"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/ok_back"
                android:gravity="center"
                android:padding="2dp"
                android:src="@drawable/member_icon"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textSize="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text=" Active"
                android:textColor="#898989"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sts1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/notok_back"
                android:gravity="center"
                android:padding="2dp"
                android:src="@drawable/member_icon"
                android:text="@string/wrong"
                android:textColor="#ffffff"
                android:textSize="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:text=" Inactive"
                android:textColor="#898989"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/viv1"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/counter"
        android:layout_marginTop="0dp"
        android:background="#cab1b1b1" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viv1"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:clipToPadding="false"
            android:descendantFocusability="blocksDescendants"
            android:divider="@null"
            android:dividerHeight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:scrollbars="none" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/error"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/sad"
        android:visibility="gone" />

    <TextView
        android:id="@+id/erroralert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/plz_back"
        android:text="Failed to load data.\nRefresh again"
        android:textAlignment="center"
        android:textColor="#e83d3d"
        android:textSize="18dp"
        android:textStyle="normal"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:progressDrawable="@drawable/circular_progress_bar" />

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="অপেক্ষা করুন..."
        android:textAlignment="center"
        android:textColor="#e83d3d"
        android:textSize="18dp"
        android:textStyle="normal"
        android:visibility="gone" />
</RelativeLayout>