<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/tt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Job Category"
                android:textColor="#000000"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Jobs In Sylhet"
                android:textColor="#6b6868"
                android:textSize="11dp"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:id="@+id/viv"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/v"
        android:layout_marginTop="0dp"
        android:background="#cad6d6d6" />

    <LinearLayout
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Selected Jobs"
            android:textColor="#ffffff"
            android:textSize="12dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/counter"
        android:layout_marginBottom="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="My Jobs"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13dp" />

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:divider="@null"
                android:visibility="gone"
                android:dividerHeight="5dp"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/list_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginTop="0dp"
                android:text="N/A"
                android:textColor="#5e5e5e"
                android:textSize="14dp"
                android:visibility="gone" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:clipToPadding="false"
                android:divider="@null"
                android:dividerHeight="5dp"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/list_empty1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginTop="0dp"
                android:text="N/A"
                android:textColor="#5e5e5e"
                android:textSize="14dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/statuses"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center|end"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_back"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/add"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/button_login1"
                android:textSize="12dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="Edit"
                android:textColor="@color/button_login1"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/viv1"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:background="#cad6d6d6" />

    <TextView
        android:id="@+id/error"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/error"
        android:textSize="35dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone" />

    <TextView
        android:id="@+id/erroralert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/plz_back"
        android:text="Failed to load data.\nRefresh again"
        android:textAlignment="center"
        android:textColor="#e83d3d"
        android:textSize="18dp"
        android:textStyle="normal"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:progressDrawable="@drawable/circular_progress_bar" />

</RelativeLayout>